# laser-generic-sandbox

./: .cookiecutterrc  404.html  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/workflows/: bump-version.yml  github-actions.yml  preview_on_PR.yml
code_of_conduct/: index.html
contribute/: index.html
customization/css/: extra.css
customization/overrides/partials/: copyright.html
get-started/: index.html
get-started/calibration/: index.html
get-started/optimization/: index.html
previews/: index.html
reference/SUMMARY/: index.html
reference/laser/: index.html
reference/laser/core/: index.html
reference/laser/core/__main__/: index.html
reference/laser/core/cli/: index.html
reference/laser/core/demographics/: index.html
reference/laser/core/demographics/kmestimator/: index.html
reference/laser/core/demographics/pyramid/: index.html
reference/laser/core/demographics/spatialpops/: index.html
reference/laser/core/distributions/: index.html
reference/laser/core/extension/: index.html
reference/laser/core/laserframe/: index.html
reference/laser/core/migration/: index.html
reference/laser/core/propertyset/: index.html
reference/laser/core/random/: index.html
reference/laser/core/sortedqueue/: index.html
reference/laser/core/utils/: index.html
reference/laser/generic/: index.html
reference/laser/generic/SEIR/: index.html
reference/laser/generic/SEIRS/: index.html
reference/laser/generic/SI/: index.html
reference/laser/generic/SIR/: index.html
reference/laser/generic/SIRS/: index.html
reference/laser/generic/SIS/: index.html
reference/laser/generic/components/: index.html
reference/laser/generic/immunization/: index.html
reference/laser/generic/importation/: index.html
reference/laser/generic/model/: index.html
reference/laser/generic/shared/: index.html
reference/laser/generic/utils/: index.html
reference/laser/generic/vitaldynamics/: index.html
search/: search_index.json
software-overview/: index.html
software-overview/architecture/: index.html
software-overview/database/: index.html
software-overview/demographics/: index.html
software-overview/demographics/age_pyramid/: age_pyramid.ipynb  index.html
software-overview/demographics/kmestimator/: index.html  kmestimator.ipynb
software-overview/migration/: index.html
software-overview/scenario/: index.html
software-overview/transmission/: index.html
src/laser/generic/: __init__.py  components.py
tests/: age_at_infection.py  compare.py  mabs_example.py  test_seir.py  test_seirs.py  test_si.py  test_sir.py  test_sirs.py  test_sis.py  test_validation.py
tutorials/: index.html  rwanda.csv
tutorials/census_tracker_sir/: index.html
tutorials/notebooks/01_SI_nobirths_logistic_growth/: 01_SI_nobirths_logistic_growth.ipynb  index.html
tutorials/notebooks/02_SI_wbirths_logistic_growth/: 02_SI_wbirths_logistic_growth.ipynb  index.html
tutorials/notebooks/03_SIS_nobirths_logistic_growth/: 03_SIS_nobirths_logistic_growth.ipynb  index.html
tutorials/notebooks/04_SIR_nobirths_outbreak_size/: 04_SIR_nobirths_outbreak_size.ipynb  index.html
tutorials/notebooks/05_SIR_wbirths_age_distribution/: 05_SIR_wbirths_age_distribution.ipynb  index.html
tutorials/notebooks/06_SIR_wbirths_natural_periodicity/: 06_SIR_wbirths_natural_periodicity.ipynb  index.html
tutorials/notebooks/07_SIR_CCS/: 07_SIR_CCS.ipynb  index.html
tutorials/notebooks/08_2patch_SIR_wbirths_correlation/: 08_2patch_SIR_wbirths_correlation.ipynb  index.html
tutorials/notebooks/09_rabies_diffusion_1D/: 09_rabies_diffusion_1D.ipynb  index.html
tutorials/notebooks/10_England_and_Wales/: 10_England_and_Wales.ipynb  index.html
tutorials/notebooks/EW_analysis/: EW_analysis.ipynb  index.html
tutorials/notebooks/SEI_and_SEIS_implementations/: SEI_and_SEIS_implementations.ipynb  index.html
tutorials/notebooks/births/: births.ipynb  index.html
tutorials/notebooks/constant_pop/: constant_pop.ipynb  index.html
tutorials/notebooks/data/: Nigeria-Distribution-2020.csv  Nigeria-Survival-2020.csv
tutorials/notebooks/distributions/: distributions.ipynb  index.html
tutorials/notebooks/grid_examples/: grid_examples.ipynb  index.html
tutorials/notebooks/mortality/: index.html  mortality.ipynb
tutorials/notebooks/ri_exploration/: index.html  ri_exploration.ipynb
tutorials/notebooks/seasonality/: index.html  seasonality.ipynb
tutorials/sir/: index.html
whatsnew/: index.html
