[project]
name = "laser.generic"
version = "1.0.1"
description = "Generic, SI/SIR/SEIR/etc., disease models implemented with the LASER toolkit."
requires-python = ">=3.9,<3.15"
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["sir", "seir", "spatial", "modeling", "laser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

authors = [
  {name = "Christopher Lorton", email = "christopher.lorton@gatesfoundation.org"},
  {name = "Jonathan Bloedow", email = "jonathan.bloedow@gatesfoundation.org"},
  {name = "Katherine Rosenfeld", email = "katherine.rosenfeld@gatesfoundation.org"},
  {name = "Kevin McCarthy", email = "kevin.mccarthy@gatesfoundation.org"},
  {name = "Paul R Saxman", email = "paul.saxman@gatesfoundation.org"},
]

maintainers = [
  {name = "Christopher Lorton", email = "christopher.lorton@gatesfoundation.org"},
  {name = "Paul R Saxman", email = "paul.saxman@gatesfoundation.org"}
]

dependencies = [
  "click",
  "laser-core~=1.0",
  "tqdm",
  "geopandas",
  "pandas",
  # "llvmlite", # required by and installed by laser-core
  # "numba",    # required by and installed by laser-core
  "numpy",
  "scipy",
  "scikit-learn",
  "mplcursors>=0.7",
  "PyWavelets",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "tox>=4.30.3",
  "tox-uv>=1.28.1",
  "uv>=0.10.6",
]

# uv uses this in addition (?) to [project.optional-dependencies] above
[dependency-groups]
dev = [
    "tox>=4.30.3",
    "tox-uv>=1.28.1",
    "uv>=0.10.6",
]

basemaps = [
  "contextily>=1.6.2",
]

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/laser-generic/"
Documentation = "https://institutefordiseasemodeling.github.io/laser-generic"
Repository = "https://github.com/InstituteforDiseaseModeling/laser-generic.git"
Issues = "https://github.com/InstituteforDiseaseModeling/laser-generic/issues"
Changelog = "https://github.com/InstituteforDiseaseModeling/laser-generic/blob/master/CHANGELOG.md"

[project.scripts]
generic = "laser.generic.cli:run"

[build-system]
requires = ["setuptools>=80.9.0",]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["laser*"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  # This is for a Python 3.9 / matplotlib / pyparsing specific problem.
  # When we drop support for Python 3.9, we can remove this section.
  # Silence pyparsing deprecation from matplotlib on py39
  "ignore:'enablePackrat' deprecated - use 'enable_packrat'",
  "ignore:'oneOf' deprecated - use 'one_of':pyparsing.warnings.PyparsingDeprecationWarning",
  "ignore:'parseString' deprecated - use 'parse_string'",
  "ignore:'resetCache' deprecated - use 'reset_cache'",
]
markers = ["modeltest"]

[tool.ruff]
extend-exclude = ["static", "ci/templates", "*.ipynb"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["I001"]
"ci/*" = ["S"]
"notebooks/07_SIR_CCS.ipynb" = ["F", "PTH", "C", "W", "I"]
"notebooks/08_2patch_SIR_wbirths_correlation.ipynb" = ["F", "PTH", "C", "W", "I"]

ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "S603", # flake8-bandit subprocess-without-shell-equals-true
    "S607", # flake8-bandit start-process-with-partial-path
    "E501", # pycodestyle line-too-long
]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.bumpversion]
current_version = "1.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "🔖 Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "🔖 Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = ".cookiecutterrc"
search = 'version: "{current_version}"'
replace = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "/v{current_version}.svg"
replace = "/v{new_version}.svg"

[[tool.bumpversion.files]]
filename = "README.md"
search = "/v{current_version}...main"
replace = "/v{new_version}...main"

[[tool.bumpversion.files]]
filename = "src/laser/generic/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
